# This file is part of the Hercules-Helper project.
#
# (C) Copyright William R. Lewis, 2020-2024

# Changelog:
#
# Updated: 19 APR 2024
# - Remove backslashed quotes from help output
#
# Updated: 16 APR 2024
# - Allow new OS/Builds via opt_prompts/--prompts [Rudi]
#   When system detection fails, or system is known to not
#   be supported, prompt and allow processing to coninue.
#
# Updated: 16 APR 2024
# - on macOS, use external helper script to build Regina
#   Because of recent macOS Xcode-Tools and Clang not being too happy
#   with the Regina 3.6 we had been building, we check for macOS
#   and call the external build helper instead of doing it all by hand.
#
# Updated: 13 APR 2024
# - Don't try to add LD_LIBRARY_PATH if it's not present
#
# Updated: 11 APR 2024
# - on macOS, tack LD_LIBRARY_PATH onto DYLD_LIBRARY_PATH
#   This is because macOS for security reasons doesn't pass
#   the shell's DYLD_LIBRARY_PATH into the next level shell.
#
# Updated: 02 APR 2024
# - Fix macOS version detection issue that crept in a while back
# - Make the various build helpers more uniform (part 1)
# - No longer default to Aethra.  --flavor= must be specified.
#   There was too much confusion having a default flavor.
# - Don't display message for Bash versions < 4.
#
# Updated: 10 MAR 2024
# - Add support for Sparky Linux
#
# Updated: 04 MAR 2024
# - Remove the long-running process looking for various compiler files
#
# Updated: 02 MAR 2024
# - Allow either '--flavor=sdl-hyperion' or '--flavor=sdl-hercules'
# - Improve wording of "source" message and end of processing
# - Make that message display in color
#
# Updated: 22 JAN 2024
# - Improvements to Alpine support
#
# Updated: 21 JAN 2024
# - Apline now supported, for Hercules-Aethra (not fully tested)
#
# Updated: 12 JAN 2024
# - fix type in README
# - add support for Devuan Linux
#
# Updated: 29 DEC 2023
# - correct Regina REXX build on Pine64
#
# Updated: 06 DEC 2023
# - fix path in dpkg postinst script
#